feat(schema): add version and views
#202
